# splink_synthetic_data

./: .gitignore  03_raw_persons_data_to_one_line_per_person.py  04_create_name_lookups.py  05_transform_raw_data.py  07_corrupt_records.py  08_dedupe_syth_data.py  09_graph_measures.py  09a_parallel_graph.sh  master_records.ipynb  parallel_corrupt.sh  pyproject.toml
corrupt/: corrupt_date.py  corrupt_gender.py  corrupt_name.py  corruption_functions.py
graphs/: linkagegraph.py  plot_fns.py
path_fns/: filepaths.py
synthetic_data/: estimate_threshold.py  prepare.py  random_match.py
transform_master_data/: to_lowercase.py
