[tool.poetry]
name = "splink_synthetic_data"
version = "0.1.0"
description = ""
authors = ["Robin Linacre <robin.linacre@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
rdflib = "^5.0.0"
SPARQLWrapper = "^1.8.5"
requests = "^2.25.1"
stackprinter = "^0.2.5"
altair = "^4.2.0"
duckdb = "^0.5.1"
pyarrow = "9.0.0"
tabulate = "^0.8.10"
splink = "^3.4.0"
igraph = "^0.10.2"
pycairo = "^1.21.0"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^22.6"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
